--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-ALI_ORDERS_UPDATE = "http://mr8ugger.pythonanywhere.com/aliOrdersUpdate"
-ALI_ORDERS_GET = "http://mr8ugger.pythonanywhere.com/aliOrdersGet"
+ALI_ORDERS_UPDATE = "https://mr8ugger.pythonanywhere.com/aliOrdersUpdate"
+ALI_ORDERS_GET = "https://mr8ugger.pythonanywhere.com/aliOrdersGet"
